syntax = "proto3";

import "google/protobuf/empty.proto";

package search;

service SearchService {
  rpc IndexMedia (SearchBody) returns (StatusCode) {}
  rpc Search (SearchArgs) returns (Result) {}
  rpc Update (SearchBody) returns (StatusCode) {}
  rpc Remove (DeleteArgs) returns (StatusCode) {}
  rpc ClearIndex (google.protobuf.Empty) returns (StatusCode) {}
}

message SearchBody {
  string mediaId = 1;
  string name = 2;
  string ownerName = 3;
  repeated string tags = 4;
  string description = 5;
  string content = 6;
}

message SearchArgs {
  string text = 1;
  int32 from = 2;
  int32 size = 3;
}

message StatusCode {
  int32 statusCode = 1;
}

message Result {
  repeated SearchBody res = 1;
}

message DeleteArgs {
  string mediaId = 1;
}
